apps/server/tests/fixtures/invalid-games/throwing/index.js
export function build() {
  throw new Error('internal build error')
}
